--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -16,7 +16,7 @@ header {
 
 /* Навигация */
 .nav-cont {
-    width: 1500px;
+    width: 1100px;
     height: 42px;
     display: flex;
     justify-content: space-between;
@@ -46,14 +46,24 @@ header {
     background-size: 100%;
 	background-position: center center;
 	background-repeat: no-repeat;
-    position: relative;
     right: 5px;
+    z-index: 0;
+}
+
+.menu li {
+    width: 439px;
+    display: flex;
+    position: relative;
+    top: 6px;
+    left: 30px;
+    transition: 0.3s ease-out;
+    
 }
 
 /* Приветственная страница */
 
 .content-container {
-    width: 1500px;
+    width: 1100px;
     height: 420px;
     margin: auto;
     margin-top: 20px;
@@ -64,29 +74,105 @@ header {
 }
 
 .p1 {
-    width: 800px;
-    font-size: 45px;
+    width: 505px;
+    font-size: 35px;
     color: rgb(0, 172, 0);
     margin: auto;
     margin-top: 20px;
 }
 
 .p2 {
-    margin-top: 20px;
-    font-size: 35px;    
+    margin-top: 15px;
+    font-size: 25px;    
     color: rgb(0, 172, 0);
     padding: 12px;
 
 }
 
 .qoute-1 {
-    font-size: 25px;    
+    font-size: 20px;
+    padding: 10px;
     position: absolute;
     bottom: 0;
-        text-align: right;
+    text-align: right;
     color: rgb(0, 134, 0);
-    padding: 12px;
 }
 
 @media (max-width: 1400px) {
+    header {
+        height: 500px;
+    }
+    
+    /* Навигация */
+    .nav-cont {
+        width: 1093px;
+    }
+
+    /* Приветственная страница */
+    
+    .content-container {
+        width: 1093px;
+    }
+    
+    .p1 {
+        font-size: 35px;
+    }
+    
+    .p2 {
+        margin-top: 10px;
+        font-size: 25px;
+    
+    }
+}
+
+@media (max-width: 990px) {
+    header {
+        height: 500px;
+    }
+    
+    /* Навигация */
+    .nav-cont {
+        width: 773px;
+    }
+
+    /* Приветственная страница */
+    
+    .content-container {
+        width: 773px;
+    }
+    
+    .p1 {
+        font-size: 35px;
+    }
+    
+    .p2 {
+        margin-top: 10px;
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 770px) {
+    header {
+        height: 500px;
+    }
+    
+    /* Навигация */
+    .nav-cont {
+        width: 601px;
+    }
+
+    /* Приветственная страница */
+    
+    .content-container {
+        width: 601px;
+    }
+    
+    .p1 {
+        font-size: 35px;
+    }
+    
+    .p2 {
+        margin-top: 2px;
+        font-size: 25px;
+    }
 }
